--- a/index.html
+++ b/index.html
@@ -20,15 +20,29 @@
             color: white;
             padding: 10px 20px;
             text-align: center;
+            position: relative; /* Pozycjonowanie względem innych elementów */
+            z-index: 2; /* Upewnij się, że nagłówek jest zawsze na wierzchu */
         }
 
         nav ul {
             list-style: none;
             padding: 0;
-            display: none; /* Menu domyślnie ukryte */
             margin: 0;
             background-color: #007BFF;
-            width: 100%;
+            position: fixed;
+            top: 120px; /* Wysokość nagłówka + margines */
+            left: 0;
+            width: 250px;
+            height: 100%;
+            max-height: calc(100% - 60px - 40px); /* Wysokość ekranu - wysokość nagłówka - wysokość stopki */
+            overflow-y: auto; /* Umożliwia przewijanie, jeśli zawartość przekroczy maksymalną wysokość */
+            transform: translateX(-100%);
+            transition: transform 0.3s ease;
+            z-index: 1; /* Upewnij się, że menu jest pod nagłówkiem */
+        }
+
+        .show-menu {
+            transform: translateX(0);
         }
 
         nav ul li {
@@ -85,7 +99,10 @@
             background-color: #f8f9fa;
             text-align: center;
             padding: 10px 0;
-            margin-top: auto; /* kluczowe dla przypięcia stopki na dole */
+            position: fixed; /* Ustawienie stopki na dole */
+            bottom: 0;
+            width: 100%;
+            z-index: 2; /* Upewnij się, że stopka jest zawsze na wierzchu */
         }
 
         .registration-link {
@@ -126,12 +143,9 @@
     <script>
         document.getElementById('menu-toggle').addEventListener('click', function() {
             var menu = document.getElementById('menu');
-            if (menu.style.display === 'block') {
-                menu.style.display = 'none';
-            } else {
-                menu.style.display = 'block';
-            }
+            menu.classList.toggle('show-menu');
         });
+
 
         function onSignIn(googleUser) {
             var profile = googleUser.getBasicProfile();
