--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="google-signin-client_id" content="872214377097-abla4p0200k6um59i0ehln8tsv43siqq.apps.googleusercontent.com">
     <style>
         html, body {
-            height: 100%;
+            height: 0;
             margin: 0;
             display: flex;
             flex-direction: column;
@@ -66,16 +66,30 @@
 
         main {
             flex: 1;
-            padding: 20px;
             display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
+            flex-direction: row; /* Ustawia dzieci w rzędzie zamiast kolumnie */
+            align-items: center; /* Centruje dzieci w pionie */
+            justify-content: center; /* Centruje dzieci w poziomie */
+            padding: 20px;
+            gap: 20px; /* Dodaje odstęp pomiędzy elementami */
         }
 
+        section, form {
+            flex: 1; /* Każdy element zajmuje równą przestrzeń */
+            max-width: 50%; /* Opcjonalnie ogranicza szerokość do połowy kontenera */
+        }
+
+        /* Możesz chcieć dostosować styl formularza, aby lepiej pasował do nowego układu */
         form {
-            max-width: 300px;
-            width: 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start; /* Wyrównuje elementy formularza do lewej strony */
+            max-width: 300px; /* Ogranicza maksymalną szerokość formularza, aby nie rozciągał się na całą dostępną przestrzeń */
+        }
+
+        /* Styl dla sekcji, aby upewnić się, że tekst nie rozciąga się na całą szerokość */
+        section {
+            max-width: 300px; /* Ogranicza maksymalną szerokość sekcji */
         }
 
         form input[type="email"], form input[type="password"], .g-signin2 {
@@ -98,7 +112,6 @@
         footer {
             background-color: #f8f9fa;
             text-align: center;
-            padding: 10px 0;
             position: fixed; /* Ustawienie stopki na dole */
             bottom: 0;
             width: 100%;
