--- a/index.html
+++ b/index.html
@@ -51,6 +51,12 @@
             padding: 10px 0;
         }
 
+        nav ul li:hover {
+            text-align: center;
+            padding: 10px 0;
+            background-color: #008cff;
+        }
+
         nav ul li a {
             color: white;
             text-decoration: none;
@@ -59,6 +65,8 @@
 
         nav button {
             background: none;
+            width: 150px;
+            height: 25px;
             border: none;
             color: white;
             font-size: 16px;
@@ -110,6 +118,10 @@
             margin: 5px 0;
         }
 
+        button:hover {
+            background-color: #008cff;
+        }
+
         footer {
             background-color: #f8f9fa;
             text-align: center;
@@ -119,11 +131,7 @@
             z-index: 2; /* Upewnij się, że stopka jest zawsze na wierzchu */
         }
 
-        .registration-link {
-            display: block;
-            text-align: center;
-            margin-top: 10px;
-        }
+       
     </style>
 </head>
 <body>
@@ -148,7 +156,7 @@
             <input type="password" placeholder="Hasło">
             <button type="submit">Zaloguj się</button>
             <div class="g-signin2" data-onsuccess="onSignIn"></div>
-            <a href="#" class="registration-link">Nie masz konta? Zarejestruj się</a>
+            <button href="#" class="registration-link">Nie masz konta? Zarejestruj się</button>
         </form>
     </main>
     <footer>
