--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
             display: flex;
             flex-direction: column;
             font-family: Arial, sans-serif;
+            background-color: #f4f0f4;
+            color: #9e8d8f; /* Ciemny szary dla tekstu */
         }
 
         header {
-            background-color: #007BFF;
+            background-color: #1b2c00;
             color: white;
             padding: 10px 20px;
             text-align: center;
@@ -29,9 +31,9 @@
             list-style: none;
             padding: 0;
             margin: 0;
-            background-color: #007BFF;
+            background-color: #4d7701;
             position: fixed;
-            top: 120px; /* Wysokość nagłówka + margines */
+            top: 125px; /* Wysokość nagłówka + margines */
             left: 0;
             width: 250px;
             height: 100%;
@@ -54,7 +56,7 @@
         nav ul li:hover {
             text-align: center;
             padding: 10px 0;
-            background-color: #008cff;
+            background-color: #f46500;
         }
 
         nav ul li a {
@@ -81,6 +83,7 @@
             justify-content: center; /* Centruje dzieci w poziomie */
             padding: 20px;
             gap: 20px; /* Dodaje odstęp pomiędzy elementami */
+            color: #000000;
         }
 
         section, form {
@@ -111,7 +114,7 @@
         form button {
             width: 100%;
             padding: 10px;
-            background-color: #007BFF;
+            background-color: #4d7701;
             color: white;
             border: none;
             cursor: pointer;
@@ -119,11 +122,11 @@
         }
 
         button:hover {
-            background-color: #008cff;
+            background-color: #f46500;
         }
 
         footer {
-            background-color: #f8f9fa;
+            background-color: #1b2c00;
             text-align: center;
             position: fixed; /* Ustawienie stopki na dole */
             bottom: 0;
@@ -131,7 +134,7 @@
             z-index: 2; /* Upewnij się, że stopka jest zawsze na wierzchu */
         }
 
-       
+      
     </style>
 </head>
 <body>
