--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
         header {
             background-color: #1b2c00;
+            font-size: 15px;
             color: white;
             padding: 10px 20px;
             text-align: center;
@@ -131,6 +132,7 @@
             position: fixed; /* Ustawienie stopki na dole */
             bottom: 0;
             width: 100%;
+            font-size: 12px;
             z-index: 2; /* Upewnij się, że stopka jest zawsze na wierzchu */
         }
 
