--- a/index.html
+++ b/index.html
@@ -8,152 +8,161 @@
     <meta name="google-signin-client_id" content="872214377097-abla4p0200k6um59i0ehln8tsv43siqq.apps.googleusercontent.com">
     <style>
         :root {
-            --primary-color: #6200EA; /* Zaktualizowany kolor główny */
-            --text-color: #FFFFFF;
-            --background-color: #F4F4F4;
-            --button-color: #6200EA;
-            --button-hover-color: #3700B3;
-            --input-bg-color: #FFFFFF;
-            --input-border-color: #CCCCCC;
-            --text-inforamtion: #000000;
-        }
+    --primary-color: #6200EA; /* Zaktualizowany kolor główny */
+    --text-color: #FFFFFF;
+    --background-color: #F4F4F4;
+    --button-color: #6200EA;
+    --button-hover-color: #3700B3;
+    --input-bg-color: #FFFFFF;
+    --input-border-color: #CCCCCC;
+    --text-information: #000000; /* Poprawiono literówkę */
+}
 
-        html, body {
-            height: 100%;
-            width: 100%;
-            margin: 0;
-            display: flex;
-            flex-direction: column;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-color: var(--background-color);
-            color: var(--text-color);
-        }
+html, body {
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background-color: var(--background-color);
+    color: var(--text-color);
+}
 
-        header {
-            height: 60px;
-            display: flex;
-            align-items: center;
-            justify-content: flex-start;
-            background-color: var(--primary-color);
-            font-size: 15px;
-            color: var(--text-color);
-            padding: 10px 20px;
-            text-align: center;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-        }
+body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh; /* Zapewnia, że treść zajmuje co najmniej całą wysokość ekranu */
+}
 
-        #menu-toggle {
-            background: var(--button-color);
-            width: 40px;
-            height: 40px;
-            margin-right: 20px;
-            cursor: pointer;
-            border: none;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            border-radius: 5px;
-        }
-        #menu-toggle:hover {
-            background: var(--button-hover-color);
-        }
-        nav ul {
-            list-style: none;
-            padding: 0;
-            margin: 0;
-            background-color: var(--primary-color);
-            position: fixed;
-            top: 80px;
-            left: 0;
-            width: 250px;
-            height: calc(100% - 60px);
-            overflow-y: auto;
-            transform: translateX(-100%);
-            transition: transform 0.3s ease;
-            border-right: 1px solid var(--input-border-color);
-        }
+header {
+    height: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    background-color: var(--primary-color);
+    font-size: 15px;
+    color: var(--text-color);
+    padding: 10px 20px;
+    text-align: center;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+}
 
-        .show-menu {
-            transform: translateX(0);
-        }
+#menu-toggle {
+    background: var(--button-color);
+    width: 40px;
+    height: 40px;
+    margin-right: 20px;
+    cursor: pointer;
+    border: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 5px;
+}
 
-        nav ul li {
-            text-align: center;
-            padding: 10px 0;
-            transition: background-color 0.3s;
-        }
+#menu-toggle:hover {
+    background: var(--button-hover-color);
+}
 
-        nav ul li:hover {
-            background-color: var(--button-hover-color);
-        }
+nav ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    background-color: var(--primary-color);
+    position: fixed;
+    top: 80px;
+    left: 0;
+    width: 250px;
+    height: calc(100% - 60px);
+    overflow-y: auto;
+    transform: translateX(-100%);
+    transition: transform 0.3s ease;
+    border-right: 1px solid var(--input-border-color);
+}
 
-        nav ul li a {
-            color: var(--text-color);
-            text-decoration: none;
-            display: block;
-        }
+.show-menu {
+    transform: translateX(0);
+}
 
-        main {
-            flex: 1;
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            justify-content: center;
-            padding: 20px;
-            gap: 20px;
-        }
+nav ul li {
+    text-align: center;
+    padding: 10px 0;
+    transition: background-color 0.3s;
+}
 
-        section, form {
-            flex: 1;
-            padding: 20px;
-            background: white;
-            color: var(--text-inforamtion);
-            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-            border-radius: 8px;
-            max-width: 40%;
-        }
+nav ul li:hover {
+    background-color: var(--button-hover-color);
+}
 
-        form {
-            display: flex;
-            flex-direction: column;
-            align-items: flex-start;
-            gap: 10px;
-        }
+nav ul li a {
+    color: var(--text-color);
+    text-decoration: none;
+    display: block;
+}
 
-        form input[type="email"], form input[type="password"], .g-signin2 {
-            width: 95%;
-            padding: 10px;
-            margin-bottom: 10px;
-            border: 1px solid var(--input-border-color);
-            border-radius: 5px;
-            background-color: var(--input-bg-color);
-        }
+main {
+    flex: 1; /* Pozwala na rozciągnięcie zawartości, aby wypełnić dostępną przestrzeń */
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+    gap: 20px;
+}
 
-        form button {
-            width: 99%;
-            padding: 10px;
-            background-color: var(--button-color);
-            color: var(--text-color);
-            border: none;
-            cursor: pointer;
-            border-radius: 5px;
-            transition: background-color 0.3s;
-        }
+section, form {
+    flex: 1;
+    padding: 20px;
+    background: white;
+    color: var(--text-information);
+    box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+    border-radius: 8px;
+    max-width: 40%;
+}
 
-        button:hover {
-            background-color: var(--button-hover-color);
-        }
+form {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 10px;
+}
 
-        footer {
-            background-color: var(--primary-color);
-            text-align: center;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-            font-size: 12px;
-            padding: 10px 0;
-            box-shadow: 0 -2px 4px rgba(0,0,0,0.1);
-        }
+form input[type="email"], form input[type="password"], .g-signin2 {
+    width: 95%;
+    padding: 10px;
+    margin-bottom: 10px;
+    border: 1px solid var(--input-border-color);
+    border-radius: 5px;
+    background-color: var(--input-bg-color);
+}
+
+form button {
+    width: 99%;
+    padding: 10px;
+    background-color: var(--button-color);
+    color: var(--text-color);
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+}
+
+button:hover {
+    background-color: var(--button-hover-color);
+}
+
+footer {
+    background-color: var(--primary-color);
+    text-align: center;
+    position: relative; /* Ustawienie na 'relative' */
+    bottom: 0;
+    width: 100%;
+    font-size: 12px;
+    padding: 10px 0;
+    color: var(--text-color);
+}
+
     </style>
 </head>
 <body>
