--- a/index.html
+++ b/index.html
@@ -2,182 +2,11 @@
 <html lang="pl">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <meta name="theme-color" content="#6200EA">
     <title>TaskMaster</title>
     <link rel="icon" href="logo.png">
-    <script src="https://apis.google.com/js/platform.js" async defer></script>
-    <meta name="google-signin-client_id" content="872214377097-abla4p0200k6um59i0ehln8tsv43siqq.apps.googleusercontent.com">
-    <style>
-        :root {
-    --primary-color: #6200EA; /* Zaktualizowany kolor główny */
-    --text-color: #FFFFFF;
-    --background-color: #F4F4F4;
-    --button-color: #6200EA;
-    --button-hover-color: #3700B3;
-    --input-bg-color: #FFFFFF;
-    --input-border-color: #CCCCCC;
-    --text-information: #000000; /* Poprawiono literówkę */
-}
-
-html, body {
-    height: 100%;
-    width: 100%;
-    margin: 0;
-    display: flex;
-    flex-direction: column;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: var(--background-color);
-    color: var(--text-color);
-}
-
-body {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh; /* Zapewnia, że treść zajmuje co najmniej całą wysokość ekranu */
-}
-
-header {
-    height: 60px;
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    background-color: var(--primary-color);
-    font-size: 15px;
-    color: var(--text-color);
-    padding: 10px 20px;
-    text-align: center;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-}
-
-#menu-toggle {
-    background: var(--button-color);
-    width: 40px;
-    height: 40px;
-    margin-right: 20px;
-    cursor: pointer;
-    border: none;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 5px;
-}
-
-#menu-toggle:hover {
-    background: var(--button-hover-color);
-}
-
-nav ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    background-color: var(--primary-color);
-    position: fixed;
-    top: 80px;
-    left: 0;
-    width: 250px;
-    height: calc(100% - 60px);
-    overflow-y: auto;
-    transform: translateX(-100%);
-    transition: transform 0.3s ease;
-    border-right: 1px solid var(--input-border-color);
-}
-
-.show-menu {
-    transform: translateX(0);
-}
-
-nav ul li {
-    text-align: center;
-    padding: 10px 0;
-    transition: background-color 0.3s;
-}
-
-nav ul li:hover {
-    background-color: var(--button-hover-color);
-}
-
-nav ul li a {
-    color: var(--text-color);
-    text-decoration: none;
-    display: block;
-}
-
-main {
-    flex: 1; /* Pozwala na rozciągnięcie zawartości, aby wypełnić dostępną przestrzeń */
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    padding: 20px;
-    gap: 20px;
-}
-
-section, form {
-    flex: 1;
-    padding: 20px;
-    background: white;
-    color: var(--text-information);
-    box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-    border-radius: 8px;
-    max-width: 40%;
-}
-
-form {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 10px;
-}
-
-form input[type="email"], form input[type="password"], .g-signin2 {
-    width: 95%;
-    padding: 10px;
-    margin-bottom: 10px;
-    border: 1px solid var(--input-border-color);
-    border-radius: 5px;
-    background-color: var(--input-bg-color);
-}
-
-form button {
-    width: 99%;
-    padding: 10px;
-    background-color: var(--button-color);
-    color: var(--text-color);
-    border: none;
-    cursor: pointer;
-    border-radius: 5px;
-    transition: background-color 0.3s;
-}
-
-button:hover {
-    background-color: var(--button-hover-color);
-}
-
-footer {
-    background-color: var(--primary-color);
-    text-align: center;
-    position: relative; /* Ustawienie na 'relative' */
-    bottom: 0;
-    width: 100%;
-    font-size: 12px;
-    padding: 10px 0;
-    color: var(--text-color);
-    z-index: 2;
-}
-
-nav {
-    z-index: 2;
-}
-
-.g-signin2 {
-    z-index: 1;
-}
-img {
-    width: 100%;
-    height: 100%;
-}
-
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
@@ -193,48 +22,21 @@ img {
     </nav>
     <main>
         <section>
-            <h2>Witaj w TaskMaster!</h2>
-            <p>Zarządzaj swoim czasem efektywnie, gdziekolwiek jesteś.</p>
+            <h2>Witaj!</h2>
+            <p>Zarządzaj swoim czasem efektywnie.</p>
             <img src="logo.png" alt="Logo">
         </section>
         <form>
-            <h3>Zaloguj się...</h3>
-            <input type="email" placeholder="Adres email">
-            <input type="password" placeholder="Hasło">
+            <h3>Zaloguj się</h3>
+            <input type="tel" pattern="[0-9]{9}" maxlength="9" placeholder="Numer telefonu" required>
+            <input type="password" placeholder="Hasło" required>
             <button type="submit">Zaloguj się</button>
-            <div class="g-signin2" data-onsuccess="onSignIn"></div>
             <button type="button" class="registration-link">Nie masz konta? Zarejestruj się</button>
         </form>
     </main>
     <footer>
-        <p>&copy; 2024 TaskMaster. Wszelkie prawa zastrzeżone.</p>
+        <p>&copy; 2024 TaskMaster</p>
     </footer>
-    <script>
-        document.getElementById('menu-toggle').addEventListener('click', function(event) {
-            var menu = document.getElementById('menu');
-            menu.classList.toggle('show-menu');
-            event.stopPropagation();
-        });
-
-        document.addEventListener('click', function(event) {
-            var menu = document.getElementById('menu');
-            var toggleButton = document.getElementById('menu-toggle');
-            if (!menu.contains(event.target) && !toggleButton.contains(event.target)) {
-                menu.classList.remove('show-menu');
-            }
-        });
-
-        function onSignIn(googleUser) {
-            var profile = googleUser.getBasicProfile();
-            console.log('ID: ' + profile.getId()); // Do not send to your backend! Use an ID token instead.
-            console.log('Name: ' + profile.getName());
-            console.log('Image URL: ' + profile.getImageUrl());
-            console.log('Email: ' + profile.getEmail()); // This is the email you need.
-            // Optional: Sign the user out after they are logged into your app
-            // gapi.auth2.getAuthInstance().signOut().then(function() {
-            //   console.log('User signed out.');
-            // });
-        }
-    </script>
+    <script src="main.js"></script>
 </body>
 </html>
