--- a/index.html
+++ b/index.html
@@ -15,11 +15,15 @@
     </header>
     <nav>
         <ul id="menu">
+            <li>
+                <button id="close-menu" aria-label="Zamknij menu">&times;</button>
+            </li>
             <li><a href="#">Strona główna</a></li>
             <li><a href="#">O aplikacji</a></li>
             <li><a href="#">Kontakt</a></li>
         </ul>
     </nav>
+    <div id="menu-overlay"></div>
     <main>
         <section>
             <h2>Witaj!</h2>
