--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
             <li>
                 <button id="close-menu" aria-label="Zamknij menu">&times;</button>
             </li>
-            <li><a href="#">Strona główna</a></li>
-            <li><a href="#">O aplikacji</a></li>
-            <li><a href="#">Kontakt</a></li>
+            <li><a href="#" data-page="home">Strona główna</a></li>
+            <li><a href="#" data-page="about">O aplikacji</a></li>
+            <li><a href="#" data-page="author">Kontakt</a></li>
         </ul>
     </nav>
+
     <div id="menu-overlay"></div>
     <main>
         <section>
